--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ const stack = [
             Mihir Nepal
           </p>
           <p class='animated text-sm md:text-base lg:text-lg opacity-75'>
-            Currently designing products for humans.
+            Currently doing stuff.
           </p>
           <div id="ctaButtons" class='animated flex flex-wrap gap-4 justify-center mt-5'>
             <a href='/blog' class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
@@ -107,12 +107,12 @@ const stack = [
       <!-- About Section -->
       <section class="animate">
         <article>
-          <p>I am a <b><i>software engineer</i></b>, <b><i>ui/ux designer</i></b>, <b><i>product planner</i></b>, <b><i>mentor</i></b>, <b><i>student</i></b>, <b><i>minimalist</i></b>, <b><i>eternal optimist</i></b>, <b><i>crypto enthusiast</i></b> and <b><i>sarcasm connoisseur</i></b>.</p>
-          <p>I love to both build and break things. I am motivated by challenging projects with self-guided research and dynamic problem solving. My true passion is crafting creative front end designs with unique takes on color, typography and motion.</p>
-          <p>During my career</p>
-          <p>I have built products ranging from marketing and ecommerce websites to complex enterprise apps with focus on delivering fast, elegant code along with delightful user interfaces.</p>
-          <p>Now</p>
-          <p>I currently work as a software engineer at StreamlineFS, where I do product planning, design and development.</p>
+          <p>I am a <b><i>example</i></b>, <b><i>example</i></b>, <b><i>example</i></b>, <b><i>example</i></b>, <b><i>example</i></b>, <b><i>example</i></b>, <b><i>example</i></b>, <b><i>example</i></b> and <b><i>example</i></b>.</p>
+          <p>Example example example example example example example. example example example example example example example example example example example example example example example</p>
+          <p> example example </p>
+          <p> example example  example example  example example  example example  example example  example example  example example  example example </p>
+          <p> example example </p>
+          <p> example example  example example  example example  example example  example example  example example  example example  example example  example example </p>
         </article>
       </section>
 
