--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -195,7 +195,7 @@ const stack = [
             Let's Connect
           </p>
           <p>
-            Reach out to me via email or on social media.
+            Contact me :).
           </p>
           <div class="grid grid-cols-4 gap-y-2 mt-4 auto-cols-min">
             {SOCIALS.map(social => (
